src/main/java/com/example/delivEatAPI/error/MenuNotFoundException.java
package com.example.delivEatAPI.error;

public class MenuNotFoundException extends RuntimeException {
    public MenuNotFoundException(String message) {
        super(message);
    }

    public MenuNotFoundException(String message, Throwable cause) {
        super(message, cause);
    }
}

